Sep 23, 2013: libphonenumber-5.8.5
* Code changes:
  - Restructured the geocoder, moving the utility classes to a new module internal/prefixmapper.

Sep 20, 2013: libphonenumber-5.8.4
* Metadata changes:
 - Adding a token to indicate which countries have mobile portability.

Sep 20, 2013: libphonenumber-5.8.3
* Code changes:
  - PhoneNumberOfflineGeocoder: Moved utility functionality to PrefixFileReader.
  - Bug fix: Argentinian (and other countries with mobile tokens) mobile numbers now geocode
             correctly.

Sep 19, 2013: libphonenumber-5.8.2
* Code changes:
  - New method in the PhoneNumberUtil API - getCountryMobileToken.

Sep 19, 2013: libphonenumber-5.8.1
* Metadata changes:
 - New alternate formatting data for country calling code(s): 675
 - Updated phone metadata for region code(s):
   AO, AU, BF, BW, CA, CH, CI, CN, DE, FR, MA, MR, MU, NI, PG, SA, SE, US, VI
 - New short number metadata for region code(s): IQ
 - Updated short number metadata for region code(s):
   AU, BR, DO, EG, FR, GH, ID, IL, JM, KE, KZ, LR, MW, NG, NI, SA, SE, SL, TZ, US, UZ
 - New geocoding data for country calling code(s):
   966 (ar, en), 1 (en)

Sep 2, 2013: libphonenumber-5.8
* Code changes:
 - Renamed ShortNumberUtil to ShortNumberInfo -> the former class is now deprecated and will be
   deleted in a later release. At the moment it just delegates to ShortNumberInfo.
 - New methods in the ShortNumberInfo API - isCarrierSpecific, singleton interface,
   isPossibleShortNumber, isValidShortNumber, getShortNumberCost. Note this is an experimental API
   at the moment and subject to change.
 - Bug fixes:
    -- AsYouTypeFormatting: 3-digit numbers can be formatted as a group where appropriate
    -- AsYouTypeFormatting: Countries with an optional national prefix were considered before to
       have always entered it, resulting in bugs where numbers without the national prefix were
       not properly formatted.